添加防腐层,lesson30
