# internal/order/ports/openapi_api.gen.go
@@ -14,11 +14,11 @@ import (
 // ServerInterface represents all server handlers.
 type ServerInterface interface {
 
-	// (POST /customer/{customerID}/order)
-	PostCustomerCustomerIDOrder(c *gin.Context, customerID string)
+	// (POST /customer/{customer_id}/orders)
+	PostCustomerCustomerIdOrders(c *gin.Context, customerId string)
 
-	// (GET /customer/{customerID}/order/{orderID})
-	GetCustomerCustomerIDOrderOrderID(c *gin.Context, customerID string, orderID string)
+	// (GET /customer/{customer_id}/orders/{order_id})
+	GetCustomerCustomerIdOrdersOrderId(c *gin.Context, customerId string, orderId string)
 }
 
 // ServerInterfaceWrapper converts contexts to parameters.
@@ -30,17 +30,17 @@ type ServerInterfaceWrapper struct {
 
 type MiddlewareFunc func(c *gin.Context)
 
-// PostCustomerCustomerIDOrder operation middleware
-func (siw *ServerInterfaceWrapper) PostCustomerCustomerIDOrder(c *gin.Context) {
+// PostCustomerCustomerIdOrders operation middleware
+func (siw *ServerInterfaceWrapper) PostCustomerCustomerIdOrders(c *gin.Context) {
 
 	var err error
 
-	// ------------- Path parameter "customerID" -------------
-	var customerID string
+	// ------------- Path parameter "customer_id" -------------
+	var customerId string
 
-	err = runtime.BindStyledParameterWithOptions("simple", "customerID", c.Param("customerID"), &customerID, runtime.BindStyledParameterOptions{Explode: false, Required: true})
+	err = runtime.BindStyledParameterWithOptions("simple", "customer_id", c.Param("customer_id"), &customerId, runtime.BindStyledParameterOptions{Explode: false, Required: true})
 	if err != nil {
-		siw.ErrorHandler(c, fmt.Errorf("Invalid format for parameter customerID: %w", err), http.StatusBadRequest)
+		siw.ErrorHandler(c, fmt.Errorf("Invalid format for parameter customer_id: %w", err), http.StatusBadRequest)
 		return
 	}
 
@@ -51,29 +51,29 @@ func (siw *ServerInterfaceWrapper) PostCustomerCustomerIDOrder(c *gin.Context) {
 		}
 	}
 
-	siw.Handler.PostCustomerCustomerIDOrder(c, customerID)
+	siw.Handler.PostCustomerCustomerIdOrders(c, customerId)
 }
 
-// GetCustomerCustomerIDOrderOrderID operation middleware
-func (siw *ServerInterfaceWrapper) GetCustomerCustomerIDOrderOrderID(c *gin.Context) {
+// GetCustomerCustomerIdOrdersOrderId operation middleware
+func (siw *ServerInterfaceWrapper) GetCustomerCustomerIdOrdersOrderId(c *gin.Context) {
 
 	var err error
 
-	// ------------- Path parameter "customerID" -------------
-	var customerID string
+	// ------------- Path parameter "customer_id" -------------
+	var customerId string
 
-	err = runtime.BindStyledParameterWithOptions("simple", "customerID", c.Param("customerID"), &customerID, runtime.BindStyledParameterOptions{Explode: false, Required: true})
+	err = runtime.BindStyledParameterWithOptions("simple", "customer_id", c.Param("customer_id"), &customerId, runtime.BindStyledParameterOptions{Explode: false, Required: true})
 	if err != nil {
-		siw.ErrorHandler(c, fmt.Errorf("Invalid format for parameter customerID: %w", err), http.StatusBadRequest)
+		siw.ErrorHandler(c, fmt.Errorf("Invalid format for parameter customer_id: %w", err), http.StatusBadRequest)
 		return
 	}
 
-	// ------------- Path parameter "orderID" -------------
-	var orderID string
+	// ------------- Path parameter "order_id" -------------
+	var orderId string
 
-	err = runtime.BindStyledParameterWithOptions("simple", "orderID", c.Param("orderID"), &orderID, runtime.BindStyledParameterOptions{Explode: false, Required: true})
+	err = runtime.BindStyledParameterWithOptions("simple", "order_id", c.Param("order_id"), &orderId, runtime.BindStyledParameterOptions{Explode: false, Required: true})
 	if err != nil {
-		siw.ErrorHandler(c, fmt.Errorf("Invalid format for parameter orderID: %w", err), http.StatusBadRequest)
+		siw.ErrorHandler(c, fmt.Errorf("Invalid format for parameter order_id: %w", err), http.StatusBadRequest)
 		return
 	}
 
@@ -84,7 +84,7 @@ func (siw *ServerInterfaceWrapper) GetCustomerCustomerIDOrderOrderID(c *gin.Cont
 		}
 	}
 
-	siw.Handler.GetCustomerCustomerIDOrderOrderID(c, customerID, orderID)
+	siw.Handler.GetCustomerCustomerIdOrdersOrderId(c, customerId, orderId)
 }
 
 // GinServerOptions provides options for the Gin server.
@@ -114,6 +114,6 @@ func RegisterHandlersWithOptions(router gin.IRouter, si ServerInterface, options
 		ErrorHandler:       errorHandler,
 	}
 
-	router.POST(options.BaseURL+"/customer/:customerID/order", wrapper.PostCustomerCustomerIDOrder)
-	router.GET(options.BaseURL+"/customer/:customerID/order/:orderID", wrapper.GetCustomerCustomerIDOrderOrderID)
+	router.POST(options.BaseURL+"/customer/:customer_id/orders", wrapper.PostCustomerCustomerIdOrders)
+	router.GET(options.BaseURL+"/customer/:customer_id/orders/:order_id", wrapper.GetCustomerCustomerIdOrdersOrderId)
 }
